--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         .hero {
             height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center;
             text-align: center; padding: 2rem;
+            
+            /* UPDATED: Premium Universe/Abstract Background */
             background: 
                 linear-gradient(rgba(10, 10, 10, 0.85), rgba(10, 10, 10, 1)),
-                url('https://images.unsplash.com/photo-1593720219276-0b1eacd0aef4?q=80&w=2061&auto=format&fit=crop') no-repeat center center/cover;
+                url('https://images.unsplash.com/photo-1534796636912-3b95b3ab5986?q=80&w=2071&auto=format&fit=crop') no-repeat center center/cover;
         }
         .hero .logo {
             width: clamp(150px, 25vw, 250px);
